Improve ECDSA argument
* still need to update Lemma 1 to prove injectivity properly

--- a/unembed.tex
+++ b/unembed.tex
@@ -305,9 +305,11 @@ Concretely, this corresponds to the reality that it is actually quite trivial in
 Discursively: we consider again the idea of inverting functions. Let's start with Schnorr. Suppose your goal was to extract a secret key $x$ from a given signature $s$; we have a function $f_k(x) = k + ex$ to go $x \rightarrow s$. If we want to go the other way, i.e. to invert the function, we have $x = \frac{s - k}{e}$. But because $e$ depends on $x$ you have a circular reference and cannot construct that function in reality if the hash function in $e$ behaves cryptographically. While if you tried to apply this logic to ECDSA, it fails, because as already noted, the formula for the private key is: $d = \frac{(sk - H(m))}{R_x}$, which does not have any such circular dependency; note that there is an ``implicit hash'' of the nonce in $R_x$, but there is no such hash of the signing key.
 
 \vskip 0.2in
-
-If we try to follow the same formal modelling as used above for the Schnorr case, we can define the Unembeddability game the same way, and we can again conclude as in Lemma~\ref{lem:Xinjective} that the mapping from $\mu$ to $(x, k)$ must be injective, but we cannot make Theorem~\ref{thm:extraction} go through: it requires us to form an inverse of the function $s = g(x)^{-1}\left(H(m) + R_xx\right)$, where here $R_x$ is the x-coordinate of $R = g(x)G$ (this follows up the earlier commentary: Lemma~\ref{lem:Xinjective} is not Schnorr-specific, but Theorem~\ref{thm:extraction} is, as it requires us to form a function which only compounds the $k=g(x)$ relationship with a public scalar component, here $e$).
-
+If we try to apply the same formal model of a game PubUnEmbeddable2 (where the 2 refers to the ECDSA, instead of Schnorr, calculation performed by the challenger in the verification step), we find that the first step, that of Lemma~\ref{lem:Xinjective} already fails. And the reason for this is easy to see: remembering that $A$ consists of 2 mappings $X(\mu), K(\mu)$ we see that here, it is already sufficient to draw the output of $K$ completely at random, and still extract a constant output $\mu$. The way to do that was explained in the previous paragraph. If we adopt this strategy (no doubt there are others), we can write $X(\mu) = \frac{\mu k - e}{r_{x}}$ with $e=H(m)$ and $r_x$ the x-coord of $kG$. If we then want to collide on $X(\mu_1) = X(\mu_2)$, it is easy to arrange: just choose:
+\[ \mu_1 = \frac{e + \frac{r_1}{r_2}\left(\mu_2 k_2 -e\right)}{k_1}
+\]
+This ability to arbitrarily collide without needing a violation of preimage resistance, tells us that we cannot extract $x$ from $\mu$ via a function inversion, and indeed that is what is seen in the previous half-a-puzzle example: the data is embedded without leaking the secret key.
+ 
 \vskip 0.2in
 
 We won't make a formal attempt to prove that one can recover the same security property with ECDSA, by requiring that the message $m$ include $P$ or a hash of $P$, though it seems likely that it exists. This seems uninteresting, since if a new Bitcoin consensus rule required $P$ to be accompanied by $\sigma$, then it could always be required to be BIP340 rather than a legacy signature scheme with inferior security reductions.
